--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>mybatis-plus-latest-version</version>
+            <version>3.0.0</version>
         </dependency>
     </dependencies>
 
