--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -15,8 +15,8 @@
     <dependencies>
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.0.0</version>
+            <artifactId>mybatis-plus</artifactId>
+            <version>latest-version</version>
         </dependency>
     </dependencies>
 
