--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.20</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
