--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -29,6 +29,11 @@
             <version>4.4.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
 
